<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Textos globales -->

    <string name="app_name">DECIDE</string>
    <string name="menu_settings">Configuración</string>

    <!-- Textos locales. Se especifica cada layout -->
    <string name="hello_world">Una prueba para subir un commit</string>
    <string name="title_activity_main">Decide</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- Textos locales. l_location_activity -->
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="desconocido">Desconocida</string>
    <string name="muestraGPS">¿Quieres activar el GPS?</string>
    <string name="locationManager">Error ocurrido en al activar el GPS "Location Manager"</string>
    <string name="titulo_lista_comu">Comunidades</string>
    
    
    <!-- l_main -->
    <string name="bt_titulo_comunidad">Comunidades</string>
    <string name="bt_titulo_cuenta">Cuenta</string>
    <string name="bt_titulo_preguntas">Preguntas</string>
    <string name="bt_titulo_info">Información</string>
    <string name="titulo_Test_GCM">Test de GCM</string>    
    
    
    <!-- l_detallecomunidad -->
    <string name="bt_suscribir">Suscribir a la comunidad</string>
    <string name="bt_desuscribir">Quitar suscripcion</string>

    <!-- l_cuenta -->
    <string name="bt_cuenta">Ver cuenta</string>
    <string name="tx_registrarse">Para poder suscribirte a la lista de comunidades debes estar registrado en DECIDE. </string>
    <string name="bt_registrarse">Date de alta en la aplicación</string>
    <string name="bt_iniciar_sesion">Iniciar sesión</string>
    <string name="txPassword">Contraseña</string>

    <!-- l_perfil -->
    <string name="tx_perfilusuario">Perfil de usuario</string>
    <string name="txNombreUsuario">Nombre</string>
    <string name="bt_cerrarsesion">Cerrar sesion</string>
    
    
    <!-- l_usuario_alta -->
    <string name="tx_usuario">Texto de pantalla de usuario</string>
    <string name="tx_alta_usuario">Alta de usuario</string>
    <string name="b_alta_usuario">Alta de usuario</string>
    <string name="txNombre">Nombre</string>
    <string name="txApellidos">Apellidos</string>
    <string name="txEmail">Email</string>
    <string name="txTelefono">Teléfono</string>
    
    
    <!-- l_detallepregunta -->
    <string name="ti_Pregunta">Preguntas</string>

    
    <!-- l_info -->
    <string name="ti_informacion">Informacion</string>
    
    
     
    
    
    
    
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_perfil">PerfilActivity</string>

</resources>