<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#fff">
 
        <!--  Header  Starts android:background="@layout/header_gradient"-->
        <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"                
                android:paddingBottom="5dp">
                
                 <TextView
					android:id="@+id/tv_CuentaNombre"
					style="@style/Titulo_pagina"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:padding="13dp"
					android:textSize="22sp" 
					android:text="@string/tx_alta_usuario"/>
        </LinearLayout>
        
        
        <LinearLayout android:id="@+id/footer"
                android:layout_width="fill_parent"
                android:layout_height="90dip"
                android:layout_alignParentBottom="true">
        </LinearLayout>
  
        <!-- Formualario de registro -->
        <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">

            <!-- Nombre-->

          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/txNombre"/>
          
          <EditText android:id="@+id/ET_Nombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:layout_marginBottom="20dip"/>
          
          <!--  Apellidos -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/txApellidos"/>
          
          <EditText android:id="@+id/ET_Apellidos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"/>
          
          <!--  Email -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/txEmail"/>
          <EditText android:id="@+id/ET_Mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dip"/>
          
          <!-- Teléfono -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/txTelefono"/>
          
          <EditText android:id="@+id/ET_Telefono"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                android:layout_marginTop="5dip"/>
          
          <!-- Boton de alta usuario -->
          <Button android:id="@+id/bt_altausuario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/bt_alta_usuario"/>
          


        </LinearLayout>
  </RelativeLayout>
</ScrollView>


    