<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:id="@+id/scroll_usuario_alta">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#fff">
 

        <LinearLayout android:id="@+id/header"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"                
	        android:paddingBottom="5dp">
                
            <TextView
				android:id="@+id/tv_CuentaNombre"
				style="@style/Titulo_pagina"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="13dp"
				android:textSize="22sp" 
				android:text="@string/tx_alta_usuario"/>
        </LinearLayout>
        
        
        <LinearLayout android:id="@+id/footer"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true">
        </LinearLayout>
  
        <!-- Formualario de registro -->
        <LinearLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:layout_below="@id/header">
            
            <!-- Nombre-->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/txNombre"/>
          
          <EditText android:id="@+id/ET_Nombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:layout_marginBottom="20dp"/>
          
          <!--  Apellidos -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/txApellidos"/>
          
          <EditText android:id="@+id/ET_Apellidos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:layout_marginBottom="20dp"/>
          
          <!--  Email -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/txEmail"/>
          
          <EditText android:id="@+id/ET_Mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"/>
          
          <!-- Teléfono -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/txTelefono"/>
          
          <EditText android:id="@+id/ET_Telefono"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                android:layout_marginTop="5dp"/>
          
           
          <!-- Boton de alta usuario -->
          <!-- Se elimina este boton, ya que ponemos los estandars de un Alertdialog
          <Button android:id="@+id/b_usuario_alta"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/b_alta_usuario"
                android:onClick="b_usuario_alta"/> 
        	-->
        
        </LinearLayout>
        
  </RelativeLayout>
</ScrollView>


    